# proxy-vpn-switcher

./: CMakeLists.txt  README.md  requirements.txt  setup.py
proxy_vpn_switcher/: __init__.py  cli.py  config.py  switcher.py
src/: main.cpp  network_utils.cpp  network_utils.h  switcher.cpp  switcher.h
tests/: test_switcher.cpp  test_switcher.py
